[ADD] remove test configuration in public folder

--- a/frontend-angular/tsconfig.app.json
+++ b/frontend-angular/tsconfig.app.json
@@ -7,9 +7,9 @@
   },
   "files": [
     "src/main.ts",
-    "src/polyfills.ts"
+    "frontend-angular/src/polyfills.ts"
   ],
   "include": [
-    "src/**/*.d.ts"
+    "frontend-angular/src/**/*.d.ts"
   ]
 }
