--- a/backend-service/Dockerfile
+++ b/backend-service/Dockerfile
@@ -1,5 +1,5 @@
 # Use the official Node.js runtime as a parent image
-FROM node:14.17.0 as build
+FROM node:18-alpine
 
 # Set the working directory to /app
 WORKDIR /app
@@ -9,9 +9,14 @@ COPY package*.json ./
 
 # Install dependencies
 RUN npm install
+# If you are building your code for production
+# RUN npm ci --omit=dev
 
 # Copy the rest of the application code to the working directory
 COPY . .
 
-# Build the Angular application for production
-RUN npm run build --prod
+# Expose port 3000 for the Express server
+EXPOSE 3000
+
+# Start the Express server
+CMD ["node", "app.js"]
